[package]
name = "disk_store"
version = "0.1.0"
edition = "2024"

[dependencies]
meme = { path = "../../domain/meme" }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
meme = { path = "../../domain/meme", features = ["testing"] }
fake = { workspace = true, features = ["derive", "url"] }
rstest = { workspace = true }
tempfile = { workspace = true }
