[package]
name = "sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
identity = { path = "../../domain/identity" }
meme = { path = "../../domain/meme" }
user = { path = "../../domain/user" }

sqlx = { workspace = true, features = [
  "sqlite",
  "runtime-tokio-rustls",
  "uuid",
] }
uuid = { workspace = true, features = ["v7"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
meme = { path = "../../domain/meme", features = ["testing"] }
user = { path = "../../domain/user", features = ["testing"] }
identity = { path = "../../domain/identity", features = ["testing"] }

fake = { workspace = true, features = ["derive", "url"] }
rstest = { workspace = true }
