[package]
name = "user"
version = "0.1.0"
edition = "2024"

[features]
testing = ["dep:mockall", "fake/derive"]
argon2-hasher = ["argon2/alloc", "argon2/std"]

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
jiff = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v7"] }

# Optional dependencies
argon2 = { workspace = true, optional = true }

# Optional dependencies for testing
fake = { workspace = true, optional = true, features = ["derive"] }
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
fake = { workspace = true, features = ["derive"] }
